Crash in [@ mozilla::net::CookieCommons::SchemeToSchemeType]
Categories
(Core :: Networking: Cookies, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | fixed |
| firefox80 | --- | fixed |
People
(Reporter: philipp, Assigned: baku)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-c0e829de-1479-441f-bc11-f30f00200610.
Top 10 frames of crashing thread:
0 xul.dll static mozilla::net::CookieCommons::SchemeToSchemeType netwerk/cookie/CookieCommons.cpp:653
1 xul.dll static mozilla::net::CookieCommons::URIToSchemeType netwerk/cookie/CookieCommons.cpp:621
2 xul.dll mozilla::net::CookieService::GetCookiesForURI netwerk/cookie/CookieService.cpp:859
3 xul.dll mozilla::net::CookieServiceParent::TrackCookieLoad netwerk/cookie/CookieServiceParent.cpp:99
4 xul.dll mozilla::dom::ContentParent::UpdateCookieStatus dom/ipc/ContentParent.cpp:5572
5 xul.dll mozilla::dom::ContentParent::AboutToLoadHttpFtpDocumentForChild dom/ipc/ContentParent.cpp:5614
6 xul.dll mozilla::net::FTPChannelParent::OnStartRequest netwerk/protocol/ftp/FTPChannelParent.cpp:395
7 xul.dll mozilla::net::DocumentLoadListener::ResumeSuspendedChannel netwerk/ipc/DocumentLoadListener.cpp:959
8 xul.dll mozilla::net::DocumentLoadListener::FinishReplacementChannelSetup netwerk/ipc/DocumentLoadListener.cpp:843
9 xul.dll mozilla::net::DocumentLoadListener::RedirectToRealChannelFinished netwerk/ipc/DocumentLoadListener.cpp:755
this crash signature is starting to show up in firefox 79 with MOZ_CRASH(Unsupported scheme type) from bug 1638358. one user comment mentioned "tried to use ftp" at the time of the crash.
| Assignee | ||
Comment 1•5 years ago
|
||
This has been fixed in bug 1642971.
| Reporter | ||
Comment 2•5 years ago
|
||
hi, bug 1642971 received a patch during the 79 nightly cycle - crashes with the signature here are still showing up from 79.0b though.
even if it's the same issue, it seems that the crash is not fixed in all cases yet.
| Assignee | ||
Comment 3•5 years ago
|
||
Oh! Yes, that crash report was fixed (it's about FTP) but others are not. I just sent a fix.
| Assignee | ||
Comment 4•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 6•5 years ago
|
||
| bugherder | ||
Comment 7•5 years ago
|
||
The patch landed in nightly and beta is affected.
:baku, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 8•5 years ago
|
||
Comment on attachment 9161818 [details]
Bug 1650656 - Call CookieCommons::SchemeToSchemeType only when the scheme is supported, r?mayhemer
Beta/Release Uplift Approval Request
- User impact if declined: A crash can occur in debug builds
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The patch adds a scheme check in any of the cookieService methods, bailing out if the scheme is not supported. Low risk.
- String changes made/needed:
Comment 9•5 years ago
|
||
Comment on attachment 9161818 [details]
Bug 1650656 - Call CookieCommons::SchemeToSchemeType only when the scheme is supported, r?mayhemer
Approved for 79.0b8.
Comment 10•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Description
•