Bug 1650656 - Call CookieCommons::SchemeToSchemeType only when the scheme is supported, r=mayhemer, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D82491